Added season create and get season api and frontend functionality.
