# backend/docs/bundled-api-doc.yaml
@@ -632,6 +632,9 @@ paths:
                                         theme:
                                           type: string
                                           description: The theme of the season.
+                                        isActive:
+                                          type: boolean
+                                          description: Whether the season is currently active.
                                       required:
                                         - id
                                         - name
@@ -639,6 +642,7 @@ paths:
                                         - end_date
                                         - location
                                         - theme
+                                        - isActive
                                     leagueMembers:
                                       type: array
                                       items:
@@ -870,6 +874,9 @@ paths:
                                   theme:
                                     type: string
                                     description: The theme of the season.
+                                  isActive:
+                                    type: boolean
+                                    description: Whether the season is currently active.
                                 required:
                                   - id
                                   - name
@@ -877,6 +884,7 @@ paths:
                                   - end_date
                                   - location
                                   - theme
+                                  - isActive
                               leagueMembers:
                                 type: array
                                 items:
@@ -1164,6 +1172,9 @@ paths:
                                     theme:
                                       type: string
                                       description: The theme of the season.
+                                    isActive:
+                                      type: boolean
+                                      description: Whether the season is currently active.
                                   required:
                                     - id
                                     - name
@@ -1171,6 +1182,7 @@ paths:
                                     - end_date
                                     - location
                                     - theme
+                                    - isActive
                                 leagueMembers:
                                   type: array
                                   items:
@@ -1316,6 +1328,9 @@ paths:
                                   theme:
                                     type: string
                                     description: The theme of the season.
+                                  isActive:
+                                    type: boolean
+                                    description: Whether the season is currently active.
                                 required:
                                   - id
                                   - name
@@ -1323,6 +1338,7 @@ paths:
                                   - end_date
                                   - location
                                   - theme
+                                  - isActive
                               leagueMembers:
                                 type: array
                                 items:
@@ -1591,6 +1607,97 @@ paths:
       operationId: getLeagueImage
       parameters:
         - name: leagueId
+          in: path
+          required: true
+          description: The ID of the profile.
+          schema:
+            type: string
+      responses:
+        '200':
+          description: A profile image successfully retrieved from S3
+          content:
+            image/jpeg:
+              schema:
+                type: string
+                format: binary
+                contentEncoding: base64
+        '404':
+          description: Profile image not found
+          content:
+            application/json:
+              schema:
+                type: object
+                allOf:
+                  - type: object
+                    required:
+                      - success
+                      - message
+                      - statusCode
+                    properties:
+                      success:
+                        type: boolean
+                        example: true
+                      message:
+                        type: string
+                        example: Operation completed successfully.
+                      statusCode:
+                        type: integer
+                        example: 200
+                      error:
+                        type: string
+                        nullable: true
+                        example: An error occurred.
+                  - type: object
+                    required:
+                      - error
+                    properties:
+                      error:
+                        type: string
+                        description: Error message describing what went wrong
+                        example: Invalid Credentials provided
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                allOf:
+                  - type: object
+                    required:
+                      - success
+                      - message
+                      - statusCode
+                    properties:
+                      success:
+                        type: boolean
+                        example: true
+                      message:
+                        type: string
+                        example: Operation completed successfully.
+                      statusCode:
+                        type: integer
+                        example: 200
+                      error:
+                        type: string
+                        nullable: true
+                        example: An error occurred.
+                  - type: object
+                    required:
+                      - error
+                    properties:
+                      error:
+                        type: string
+                        description: Error message describing what went wrong
+                        example: Invalid Credentials provided
+  '/api/image/season/{seasonId}':
+    get:
+      tags:
+        - ImageService
+      summary: Retrieve season logo image
+      description: This endpoint allows you to retrieve a season logo image by season id.
+      operationId: getSeasonLogoImage
+      parameters:
+        - name: seasonId
           in: path
           required: true
           description: The ID of the profile.
@@ -2037,9 +2144,13 @@ paths:
                         nullable: true
                         example: An error occurred.
                   - type: object
+                    required:
+                      - responseData
                     properties:
                       responseData:
                         type: object
+                        required:
+                          - seasons
                         properties:
                           seasons:
                             type: array
@@ -2067,6 +2178,9 @@ paths:
                                 theme:
                                   type: string
                                   description: The theme of the season.
+                                isActive:
+                                  type: boolean
+                                  description: Whether the season is currently active.
                               required:
                                 - id
                                 - name
@@ -2074,6 +2188,139 @@ paths:
                                 - end_date
                                 - location
                                 - theme
+                                - isActive
+    post:
+      summary: Create a season
+      operationId: createSeason
+      description: Creates a new season.
+      tags:
+        - SeasonService
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              required:
+                - seasonNumber
+                - theme
+                - location
+                - name
+                - numberOfContestants
+                - startDate
+                - endDate
+                - isActive
+                - seasonLogo
+              properties:
+                seasonNumber:
+                  type: integer
+                  description: The number of the season.
+                  example: 1
+                isActive:
+                  type: boolean
+                  description: Whether the season is active.
+                  example: true
+                theme:
+                  type: string
+                  description: The theme of the season.
+                  example: 'Survivor: Borneo'
+                location:
+                  type: string
+                  description: The location of the season.
+                  example: Borneo
+                name:
+                  type: string
+                  description: The name of the season.
+                  example: 'Survivor: Borneo'
+                numberOfContestants:
+                  type: integer
+                  description: The number of contestants in the season.
+                  example: 16
+                startDate:
+                  type: string
+                  format: date
+                  description: The start date of the season.
+                  example: '2000-05-31'
+                endDate:
+                  type: string
+                  format: date
+                  description: The end date of the season.
+                  example: '2000-08-23'
+                seasonLogo:
+                  type: string
+                  format: binary
+                  description: The logo image of the season.
+      responses:
+        '200':
+          description: Created a new season
+          content:
+            application/json:
+              schema:
+                type: object
+                allOf:
+                  - type: object
+                    required:
+                      - success
+                      - message
+                      - statusCode
+                    properties:
+                      success:
+                        type: boolean
+                        example: true
+                      message:
+                        type: string
+                        example: Operation completed successfully.
+                      statusCode:
+                        type: integer
+                        example: 200
+                      error:
+                        type: string
+                        nullable: true
+                        example: An error occurred.
+                  - type: object
+                    required:
+                      - responseData
+                    properties:
+                      responseData:
+                        type: object
+                        required:
+                          - season
+                        properties:
+                          season:
+                            type: object
+                            properties:
+                              id:
+                                type: integer
+                                format: int64
+                                description: The unique identifier of the season.
+                              name:
+                                type: string
+                                description: The name of the season.
+                              start_date:
+                                type: string
+                                format: date
+                                description: The start date of the season.
+                              end_date:
+                                type: string
+                                format: date
+                                description: The end date of the season.
+                              location:
+                                type: string
+                                description: The location of the season.
+                              theme:
+                                type: string
+                                description: The theme of the season.
+                              isActive:
+                                type: boolean
+                                description: Whether the season is currently active.
+                            required:
+                              - id
+                              - name
+                              - start_date
+                              - end_date
+                              - location
+                              - theme
+                              - isActive
   '/api/admin/season/{seasonId}':
     get:
       summary: Get seasons by ID
@@ -2117,9 +2364,13 @@ paths:
                         nullable: true
                         example: An error occurred.
                   - type: object
+                    required:
+                      - responseData
                     properties:
                       responseData:
                         type: object
+                        required:
+                          - seasons
                         properties:
                           seasons:
                             type: array
@@ -2147,6 +2398,9 @@ paths:
                                 theme:
                                   type: string
                                   description: The theme of the season.
+                                isActive:
+                                  type: boolean
+                                  description: Whether the season is currently active.
                               required:
                                 - id
                                 - name
@@ -2154,6 +2408,7 @@ paths:
                                 - end_date
                                 - location
                                 - theme
+                                - isActive
 components:
   securitySchemes:
     accessTokenCookie:
