# backend/src/routes/admin/seasonRoutes.ts
@@ -4,6 +4,7 @@ import seasonController from '../../controllers/season/seasonController';
 const router = express.Router();
 
 router.get('/:seasonId', seasonController.getSeasons);
+router.post('/', seasonController.createSeason);
 router.get('/', seasonController.getSeasons);
 
 export default router;
